# AIPythonLLM

./: Handsoff_&_Tool_as_Agent_OpenAI.ipynb  LangGraphAssign1.ipynb  OPENAI_SDK_OPENROUTER.ipynb  RAG_Assign2.ipynb  README.md  TrainingCrewAI.ipynb  pyproject.toml  pythonfile.py  yah.py
12_langchain_ecosystem/langgraph/course-notebooks/module-4/: 0_commandAssignment.ipynb
src/uvpro/: .env  __init__.py  crewlitellm.py  crewuv.py
