[project]
name = "uvpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
uvpro = "uvpro:main"
pia = "uvpro.crewuv:kickoff"
ap= "uvpro.crewlitellm:kickoff"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
